--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,7 @@ RemoteSystemsTempFiles/
 ### Eclipse Patch ###
 # Spring Boot Tooling
 .sts4-cache/
-
+/Java-Code-Problems
 ### Java ###
 # Compiled class file
 *.class
